# fastapi-inferring-depends

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  test_example.py
.github/workflows/: python-publish.yml  test.yml
fastapi_inferring_depends/: depends.py
