[project]
name = "fastapi-inferring-depends"

description = "A wrapper around FastAPI's Depends function that infers its return type from its input"
authors = [
    {name = "Jan Vollmer", email = "jan@vllmr.dev"},
]
dependencies = [
    "fastapi>=0.114.0",
]
requires-python = "<4.0,>=3.9"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
repository = "https://github.com/jvllmr/fastapi-inferring-depends"

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test = "mypy"




[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "typing-extensions>=4.6.2",
    "blacken-docs>=1.13.0",
]

[tool.pdm.build]
includes = ["fastapi_inferring_depends"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
python_version = "3.9"
files = ["fastapi_inferring_depends", "test_example.py"]

[tool.isort]
profile = "black"
